# youtube_summary_to_notion

./: .env  .env.example  .gitignore  README.md  go.mod  go.sum  pyproject.toml  requirements.txt  summary.go  summary.py  yousum.sh
.github/workflows/: summary_youtube.yml
lambda_package/: bootstrap  lambda_function.py
src/: lambda_function.py  lambda_function_single.py  lambda_function_yt.py  summary.go
