[project]
name = "summary-youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "notion-client>=2.4.0",
    "protobuf>=5.29.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "youtube-transcript-api>=1.1.1",
    "yt-dlp>=2025.6.30",
]
